--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,11 +36,11 @@ layout: default
         <div class="pagination">
 <div class="PageNavigation">
   {% if page.next.url %}
-    <a class="next" href="{{page.next.url}}">&leftarrow; Next
+    <a class="next" href="{{ site.baseurl }}{{page.next.url}}">&leftarrow; Next
         <h4>{{page.next.title}} </h4></a>
   {% endif %}
       {% if page.previous.url %}
-    <a class="prev" href="{{page.previous.url}}">
+    <a class="prev" href="{{ site.baseurl }}{{page.previous.url}}">
         Previous &rightarrow;
         <h4>{{page.previous.title}}</h4> </a>
   {% endif %}
