--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
 <ul>
   {% for category in site.category %}
     <li>
-      <a href="{{ category.url }}">{{ category.tag }}</a>
+      <a href="{{ site.baseurl }}{{ category.url }}">{{ category.tag }}</a>
     </li>
   {% endfor %}
 </ul></div>
