update twitter cards, incl. image

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -16,14 +16,14 @@
 {% endif %}
 
 <!-- Twitter cards -->
-<meta name="twitter:site"    content="@jarrettfuller">
-<meta name="twitter:creator" content="@jarrettfuller">
+<meta name="twitter:site"    content="@chrismeyns">
+<meta name="twitter:creator" content="@chrismeyns">
 <meta name="twitter:title"   content="{{ page.title }}">
 
 {% if page.description %}
 <meta name="twitter:description" content="{{ page.description }}">
 {% else %}
-<meta name="twitter:description" content="Notes from the studio on design, photography, books, and culture by Jarrett Fuller.">
+<meta name="twitter:description" content="Notes from the sidewalk about philosophy, publishing, and so on by Chris Meyns">
 {% endif %}
 
 {% if page.hero %}
@@ -31,6 +31,6 @@
 <meta name="twitter:image" content="{{ site.url }}{{ page.hero }}">
 {% else %}
 <meta name="twitter:card"  content="summary_large_image">
-<meta name="twitter:image" content="{{ site.url }}/images/main_strategy-is-your-words.jpeg">
+<meta name="twitter:image" content="{{ site.baseurl }}/images/notepad.jpg">
 {% endif %}
 <!-- end of Twitter cards -->
