--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="index-footer">
-            <div class="info"><p>Chris Meyns is a philosopher, historian of science, speaker and organizer. <a href="/feed.xml">RSS feed</a>.</p>
+            <div class="info"><p>Chris Meyns is a philosopher, historian of science, speaker and organizer. <a href="{{ site.baseurl }}/feed.xml">RSS feed</a>.</p>
 
 
 
