--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,6 +2,6 @@
             <nav><ul>
                 <li><a href="https://www.chrismeyns.xyz/work">Work</a></li>
                 <li><a href="https://www.chrismeyns.xyz/events">Events</a></li>
-                <li><a href="{{ site.baseurl }}">Log</a></li>
+                <li><a href="{{ site.url }}">Log</a></li>
                 <li><a href="https://www.chrismeyns.xyz/about">About</a></li>
              </ul></nav></header>
