remove whatsapp share

--- a/_includes/share.html
+++ b/_includes/share.html
@@ -16,11 +16,11 @@
         {% include social/share-icon-linkedin.svg %}
       </a>
     </li>
-    <li class="whatsapp">
+   <!--  <li class="whatsapp">
       <a alt="Whatsapp" href="whatsapp://send" data-text="Text to share" data-href="http://www.reddit.com/submit?url={{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url | uri_escape}}&title={{ page.title | default:"" | uri_escape }}">
         {% include social/share-icon-whatsapp.svg %}
       </a>
-    </li>
+    </li> -->
     <li class="reddit">
       <a href="http://www.reddit.com/submit?url={{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url | uri_escape}}&title={{ page.title | default:"" | uri_escape }}" target="_blank">
         {% include social/share-icon-reddit.svg %}
